Bug 146741 - Initial fullscreen not set properly
Summary: Initial fullscreen not set properly
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compatibility (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-13 14:34 UTC by Oliver Grimm
Modified: 2012-03-18 21:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Grimm 2007-06-13 14:34:15 UTC
Version:           1.92 (using KDE KDE 3.5.5)
Installed from:    Debian testing/unstable Packages
OS:                Linux

bug 61351 is back!

To reproduce do

- be sure to run KDE with Kicker
- install xfce4-terminal

[1]
- run xfce4-terminal
- press F11
-> fullscreen mode overlays kicker (=real fullscreen)

[2]
- run "kstart --fullscreen xfce4-terminal"
-> fullscreen mode ist enabled but kicker is still visible
-> xfce4-terminal-fullscreen is two pixlines and some pixcolumns too small
Comment 1 Lubos Lunak 2007-06-13 15:54:09 UTC
Client::applyWindowRules() seems to do resizes without checking first if it actually can resize.
Comment 2 Oliver Grimm 2008-03-30 16:45:53 UTC
still a bug in KDE 3.5.8
Comment 3 Oliver Grimm 2008-04-19 14:48:36 UTC
still a bug in KDE 3.5.9
Comment 4 Oliver Grimm 2008-12-12 01:20:10 UTC
still a bug in KDE 3.5.10
Comment 5 Martin Flöser 2011-01-15 10:18:39 UTC
Is this still an issue with KDE 4.5.5 or 4.6?
Comment 6 Thomas Lübking 2011-01-15 20:55:37 UTC
Yesno, try xterm.

In 4.6, one can effectively set a window rule to NOT strictly obey the geometry (ie. check the left checkbox, select force, but do NOT check the right one)

The problem is the fixed aspect ratio (similar to the gvim/emacs situation), which prevents the fullscreen mode because it doesn't fit the aspect (why this works from the context menu but not at startup, i can't say atm. - it's not that the lx terminal would unset the ratio. at least xterm doesn't and yet works)
Comment 7 Thomas Lübking 2012-03-18 14:18:14 UTC
http://git.reviewboard.kde.org/r/104331/
Comment 8 Thomas Lübking 2012-03-18 21:54:52 UTC
Git commit 9dca774fe91299c7cb9ab10629bcf00cab055b39 by Thomas Lübking.
Committed on 18/03/2012 at 00:56.
Pushed by luebking into branch 'master'.

swap strictGeometry for isFullScreen case in sizeForClientSize

ratio:
it's the same preference in isFullScreenable, allows clients which do not withdraw their
restrictions (like aspect etc.) or get fullscreen artificially (like through kstart) to start in
"real" fullscreen mode.
REVIEW: 104331

M  +3    -2    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/9dca774fe91299c7cb9ab10629bcf00cab055b39